bpo-29515: add missing socket.IPPROTO_* constants on Windows (GH-12183)